Change format of messages

--- a/testing/index.html
+++ b/testing/index.html
@@ -10,7 +10,7 @@
 				messages = document.createElement('ul');
 			ws.onopen = function (event) {
 				// set id of messages we want to receive
-				ws.send("1234");
+				ws.send("hippoes");
 			};
 			ws.onmessage = function (event) {
 				console.log(event.data);
