--- a/_modules/monitor/test/test_ServerConnection.html
+++ b/_modules/monitor/test/test_ServerConnection.html
@@ -73,11 +73,13 @@
         <span class="n">mock_callback</span> <span class="o">=</span> <span class="n">MagicMock</span><span class="p">()</span>
 
         <span class="n">server</span> <span class="o">=</span> <span class="n">ServerConnection</span><span class="p">(</span><span class="s2">&quot;ip_address&quot;</span><span class="p">,</span> <span class="mi">1025</span><span class="p">,</span> <span class="n">logger</span><span class="p">)</span>
-        <span class="n">mock_receiver</span><span class="o">.</span><span class="n">recv_multipart</span><span class="o">.</span><span class="n">side_effect</span> <span class="o">=</span> <span class="p">[[</span><span class="n">b</span><span class="s2">&quot;id&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;1234&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;message text&quot;</span><span class="p">],</span> <span class="p">[</span><span class="n">b</span><span class="s2">&quot;id&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;0&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;exit&quot;</span><span class="p">]]</span>
+        <span class="n">mock_receiver</span><span class="o">.</span><span class="n">recv_multipart</span><span class="o">.</span><span class="n">side_effect</span> <span class="o">=</span> <span class="p">[[</span><span class="n">b</span><span class="s2">&quot;id&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;1234&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;command text&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;task id text&quot;</span><span class="p">,</span>
+                                                     <span class="n">b</span><span class="s2">&quot;task state text&quot;</span><span class="p">],</span> <span class="p">[</span><span class="n">b</span><span class="s2">&quot;id&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;0&quot;</span><span class="p">,</span> <span class="n">b</span><span class="s2">&quot;exit&quot;</span><span class="p">]]</span>
         <span class="n">ret</span> <span class="o">=</span> <span class="n">server</span><span class="o">.</span><span class="n">start</span><span class="p">(</span><span class="n">mock_callback</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">assertTrue</span><span class="p">(</span><span class="n">ret</span><span class="p">)</span>
-        <span class="n">mock_callback</span><span class="o">.</span><span class="n">assert_called_once_with</span><span class="p">(</span><span class="s2">&quot;1234&quot;</span><span class="p">,</span> <span class="s2">&quot;message text&quot;</span><span class="p">)</span></div>
+        <span class="n">mock_callback</span><span class="o">.</span><span class="n">assert_called_once_with</span><span class="p">(</span><span class="s2">&quot;1234&quot;</span><span class="p">,</span> <span class="s1">&#39;{&quot;command&quot;: &quot;command text&quot;, &quot;task_id&quot;: &quot;task id text&quot;, &#39;</span>
+                                              <span class="s1">&#39;&quot;task_state&quot;: &quot;task state text&quot;}&#39;</span><span class="p">)</span></div>
 
     <span class="nd">@patch</span><span class="p">(</span><span class="s1">&#39;zmq.Context&#39;</span><span class="p">)</span>
 <div class="viewcode-block" id="TestServerConnection.test_start_socket_error"><a class="viewcode-back" href="../../../monitor.test.html#monitor.test.test_ServerConnection.TestServerConnection.test_start_socket_error">[docs]</a>    <span class="k">def</span> <span class="nf">test_start_socket_error</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">mock_context</span><span class="p">):</span>
@@ -112,8 +114,8 @@
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
-      <input type="text" name="q" />
-      <input type="submit" value="Go" />
+      <div><input type="text" name="q" /></div>
+      <div><input type="submit" value="Go" /></div>
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
@@ -127,7 +129,7 @@
       &copy;2016, ReCodEx Team, Petr Stefan.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.4.1</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.4.4</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.8</a>
       
     </div>
