--- a/_modules/monitor/zeromq_connection.html
+++ b/_modules/monitor/zeromq_connection.html
@@ -46,6 +46,7 @@
 <span class="sd">&quot;&quot;&quot;</span>
 
 <span class="kn">import</span> <span class="nn">zmq</span>
+<span class="kn">import</span> <span class="nn">json</span>
 
 
 <div class="viewcode-block" id="ServerConnection"><a class="viewcode-back" href="../../monitor.html#monitor.zeromq_connection.ServerConnection">[docs]</a><span class="k">class</span> <span class="nc">ServerConnection</span><span class="p">:</span>
@@ -96,13 +97,17 @@
 <span class="sd">                decode the message with following parts:</span>
 <span class="sd">                    0 - zeromq identity of sender</span>
 <span class="sd">                    1 - byte array with channel id</span>
-<span class="sd">                    2 - byte array with message text</span>
+<span class="sd">                    2 - byte array with message command</span>
+<span class="sd">                    3 - byte array with message task_id - only for TASK command</span>
+<span class="sd">                    4 - byte array with message task_state - only for TASK command</span>
 <span class="sd">                &quot;&quot;&quot;</span>
-                <span class="n">client_id</span> <span class="o">=</span> <span class="n">message</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="o">.</span><span class="n">decode</span><span class="p">()</span>
-                <span class="n">data</span> <span class="o">=</span> <span class="n">message</span><span class="p">[</span><span class="mi">2</span><span class="p">]</span><span class="o">.</span><span class="n">decode</span><span class="p">()</span>
+                <span class="n">decoded_message</span> <span class="o">=</span> <span class="p">[</span><span class="n">item</span><span class="o">.</span><span class="n">decode</span><span class="p">()</span> <span class="k">for</span> <span class="n">item</span> <span class="ow">in</span> <span class="n">message</span><span class="p">[</span><span class="mi">1</span><span class="p">:]]</span>
+                <span class="n">client_id</span> <span class="o">=</span> <span class="n">decoded_message</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
+                <span class="n">keys</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;command&quot;</span><span class="p">,</span> <span class="s2">&quot;task_id&quot;</span><span class="p">,</span> <span class="s2">&quot;task_state&quot;</span><span class="p">]</span>
+                <span class="n">data</span> <span class="o">=</span> <span class="n">json</span><span class="o">.</span><span class="n">dumps</span><span class="p">(</span><span class="nb">dict</span><span class="p">(</span><span class="nb">zip</span><span class="p">(</span><span class="n">keys</span><span class="p">,</span> <span class="n">decoded_message</span><span class="p">[</span><span class="mi">1</span><span class="p">:])),</span> <span class="n">sort_keys</span><span class="o">=</span><span class="bp">True</span><span class="p">)</span>
             <span class="k">except</span> <span class="ne">ValueError</span><span class="p">:</span>
                 <span class="k">continue</span>
-            <span class="k">if</span> <span class="n">client_id</span> <span class="o">==</span> <span class="s2">&quot;0&quot;</span> <span class="ow">and</span> <span class="n">data</span> <span class="o">==</span> <span class="s2">&quot;exit&quot;</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">client_id</span> <span class="o">==</span> <span class="s2">&quot;0&quot;</span> <span class="ow">and</span> <span class="n">data</span> <span class="o">==</span> <span class="s1">&#39;{&quot;command&quot;: &quot;exit&quot;}&#39;</span><span class="p">:</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">_logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s2">&quot;zeromq server: got shutdown command&quot;</span><span class="p">)</span>
                 <span class="k">break</span>
             <span class="c1"># call registered callback with given data</span>
@@ -126,8 +131,8 @@
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
-      <input type="text" name="q" />
-      <input type="submit" value="Go" />
+      <div><input type="text" name="q" /></div>
+      <div><input type="submit" value="Go" /></div>
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
@@ -141,7 +146,7 @@
       &copy;2016, ReCodEx Team, Petr Stefan.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.4.1</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.4.4</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.8</a>
       
     </div>
